--- a/Spring/springcore1/pom.xml
+++ b/Spring/springcore1/pom.xml
@@ -28,6 +28,54 @@
 						<release>14</release>
 					</configuration>
 				</plugin>
+				<!-- TO USE MVN ASSEMBLY PLUGIN 
+				<plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>3.3.0</version>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <mainClass>com.parth.springcore1.SpringHelloApp</mainClass>
+                        </manifest>
+                    </archive>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>make-jar-with-dependencies</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            END OF MAVEN ASSEMBLY PLUGIN-->
+            <!--  USING MAVEN SHADE 
+            <plugin>
+		        <groupId>org.apache.maven.plugins</groupId>
+		        <artifactId>maven-shade-plugin</artifactId>
+		        <version>3.2.4</version>
+		        <executions>
+		          <execution>
+		            <phase>package</phase>
+		            <goals>
+		              <goal>shade</goal>
+		            </goals>
+		            <configuration>
+		              <transformers>
+		                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+		                  <mainClass>org.parth.springcore1.SpringHelloApp</mainClass>
+		                </transformer>
+		              </transformers>
+		            </configuration>
+		          </execution>
+		        </executions>
+	      </plugin>
+     	  END OF MAVEN SHADE -->
 			</plugins>
 		</pluginManagement>
 	</build>
